# cobfuscate

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  cli.py  errors.py  obfuscator.py  pyproject.toml
ext/: __init__.py  obfuscate.c  obfuscate.h
