[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobfuscate"
version = "0.2.0"
description = "Python code obfuscator with C backend support"
readme = "README.md"
license = "MIT"
authors = [
    {name = "WinFun15", email = "tibipocoxzsa@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "libcst>=0.4.0",
    "astor>=0.8.1",
    "cryptography>=3.4.0",
]

[project.scripts]
cobfuscate = "cobfuscate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cobfuscate*"]

[tool.setuptools.package-data]
cobfuscate = ["*.py"]
"cobfuscate.ext" = ["*.c", "*.h"]

[[tool.setuptools.ext-modules]]
name = "cobfuscate.ext.obfuscate"
sources = ["cobfuscate/ext/obfuscate.c"]